around with them and we'd learn together.  However, this never really
materialized.  As such, I'm going to be trimming the feature set.  If
this affects you, please look at the "examples" directory because I
may have moved code there.  Many features of Curio were simply
higher-level modules implemented on top of an existing core and can be
added back to your code without much effort. -- Dave

04/10/2024 Removed run_in_executor().  If you want to wait on work
           submitted to a traditional executor (from concurrent.futures),
	   use curio.traps._future_wait().
	   
04/10/2024 Removed subprocess module.  Use the Python built-in instead.
           Old code found in examples/curio_subprocess.py
	   
04/10/2024 Removed dependency on telnetlib.  Removed commands from the
           monitor that allowed changes to the running environment,
	   specifically the `cancel` and `signal` commands.  It's
	   not clear that cancelling tasks from the monitor would
	   be all that useful to begin with.  If you need to send
	   a Unix signal, use `kill` at the command line.
	  
04/10/2024 Eliminated flaky tests that were already marked for
           skipping in pytest.

Version 1.6 - October 25, 2022
------------------------------

10/25/2022 ***IMPORTANT NOTE*** This is the last release on pypi.  Curio
           will no longer be making package releases.  The most recent
	   version can be obtained at https://github.com/dabeaz/curio.

05/09/2022 Fixed a problem with cancellation and waiting in UniversalEvent.
	   Reported by vytasrgl.
	   
04/20/2022 Merged a fix for #350 where UniversalEvents couldn't be set
           more than once.   Reported and fixed by Stephen Harding.
	   
03/10/2021 Fixed Issue #340 related to the handling of daemonic tasks
           in a TaskGroup.   TaskGroups can now be given existing
           daemonic tasks in the constructor.  Daemonic tasks are
           correctly cancelled if a TaskGroup used as a context manager